Fixed issue #19905 Newsletter checkbox alignment issue
Fixed issue #19905 Newsletter checkbox alignment issue

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -128,7 +128,13 @@
         }
 
         &:extend(.abs-field-sizes all);
-
+        
+        &.field-subscription{
+            > .admin__field-control{
+                line-height: 32px;
+            }
+        }
+        
         &.admin__field-no-label {
             > .admin__field-label {
                 display: none;
